# image-and-audio-processing-with-FFT

./: CMakeUserPresets.json  README.md  used-icons.md
FFT-processing/: CMakeLists.txt  image_utils.cpp  image_utils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
FFT-processing/filters/: abstract_filters.cpp  abstract_filters.h  filter.cpp  filter.h  filters.cpp  filters.h
FFT-processing/fourier/: complex_color.h  complex_image.cpp  complex_image.h  fourier.cpp  fourier.h
FFT-processing/utils/: audio_controller.cpp  audio_controller.h  audio_utils.cpp  audio_utils.h  complex_color.cpp  complex_color.h  complex_image.cpp  complex_image.h  filter.cpp  filter.h  filters.cpp  filters.h  fourier.cpp  fourier.h  image_utils.cpp  image_utils.h  mode.h  widgets_utils.cpp  widgets_utils.h
